--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
   line-height: 24px;
   font-weight: 400;
 
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #F55;
+  color: rgba(0, 0, 0, 0.87);
+  background-color: #fafafa;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -24,27 +23,16 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-}
-
 h1 {
   font-size: 3.2em;
   line-height: 1.1;
 }
 
 button {
-  border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 15px;
   font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
@@ -67,4 +55,17 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+.copy {
+  position: absolute;
+  bottom: 0;
+  color: #8e8e8e;
+  min-width: 95%;
+  user-select: none;
+}
+
+.copy > div {
+  display: flex;
+  justify-content: center;
 }
