modal, users, comments

--- a/src/styles/_posts.css
+++ b/src/styles/_posts.css
@@ -115,3 +115,11 @@
   height: 15rem;
   object-position: top;
 }
+
+.all_users {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
