--- a/src/index.css
+++ b/src/index.css
@@ -64,11 +64,10 @@ button:focus-visible {
 }
 
 .copy {
-  position: absolute;
-  bottom: 0;
   color: #8e8e8e;
-  min-width: 95%;
   user-select: none;
+  padding: 10px 0;
+  height: 100%;
 }
 
 .copy > div {
@@ -77,7 +76,8 @@ button:focus-visible {
 }
 
 .spinner {
-  position: absolute;
-  bottom: 50%;
-  right: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 80vh;
 }
