--- a/src/styles/_login.css
+++ b/src/styles/_login.css
@@ -30,6 +30,7 @@
   justify-content: center;
   align-items: center;
   border: 1px solid #d1d1d1;
+  height: 525px;
 }
 
 .form-container .label-container {
